Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

============================
HYPERMAIL VERSION pre-2.1.9:
============================
 Peter McCluskey (Nov 15, 2003)
  Add Portugese support from Hugo Cisneiros.

 Peter McCluskey (Oct 1, 2003)
  Fix some problems with starting message number that caused bugs when
  increment = 1, linkquotes = 1 and using folder_by_date.

 Peter McCluskey (Sep 11, 2003)
  Fixes to make pcre work.

 Peter McCluskey (Sep 3, 2003)
  Applied patches from Mike McDonald to use nowrap option in the author and
 date columns in the index tables and get rid of all of the 'width=100%'
 options to the tables.

 Peter McCluskey (Sep 3, 2003)
  French language improvements from Olivier Kaloudoff.

 Peter McCluskey (Sep 1, 2003)
  Applied patches from Mike McDonald to make spamify_replacedomain use
 set_antispam_at, change printdates to include the dates in the table
 version of the bydate index, and make the table use the whole screen
 width instead of 80%. 

 Jose Kahan (Aug  18, 2003)
  - Changed to lowercase the suffixes added to the message indexes. That is,
    from "archive name By Date" to "archive name by date" because the
    upper case seemed out of style as we don't have any control on what
    is the string used for the archive's name. Did this change only for
    the English messages as I don't know if this convention works well for
    other languages.

 Jose Kahan (Aug  18, 2003)
  - Made the links to the different indexes show the index of the current entry.
    This change originated from the feedback we got on the WAI enhanced archievs.
    People find that this small changes increases the usability of the archive.

 Jose Kahan (Aug  18, 2003)
  - The links to the first message (aka #first) were not working in the
    by attachment, by author, and by subject indexes.

 Peter McCluskey (Aug 16, 2003)
  - applied fix from Jean-Charles Meyrignac to handle 0x1A in mbox.

 Jose Kahan (Aug  14, 2003)